# MLSec-Analyzer

./: .gitignore  README.md  create_exploit_samples.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  ml-model-scan.yml
examples/: config.yaml  gitlab-ci.yml
sample/: inject_gguf.py  model_broken_X.pkl
sample/keras_test_samples/: benign_01_simple.keras  benign_02_simple.h5  benign_03_synthetic.keras  benign_model.keras  exploit_01_lambda_os_system.h5  exploit_02_lambda_subprocess.h5  exploit_03_lambda_eval.h5  exploit_04_lambda_reverse_shell.h5  exploit_05_lambda_exfiltrate.h5  exploit_06_lambda_base64.h5  exploit_07_lambda_rot13.h5  exploit_08_lambda_hex.h5  exploit_09_lambda_chr.h5  exploit_10_custom_layer_rce.keras  exploit_11_custom_layer_subprocess.keras  exploit_12_custom_loss_rce.keras  exploit_13_custom_metric_rce.keras  exploit_14_zip_slip_basic.keras  exploit_15_zip_slip_deep.keras  exploit_16_zip_slip_absolute.keras  exploit_17_zip_slip_windows.keras  exploit_18_safe_mode_bypass.keras  exploit_19_nested_unsafe.keras  exploit_20_get_file_ssrf.keras  exploit_21_cloud_metadata_ssrf.keras  exploit_22_file_uri.keras  exploit_23_dos_huge_shape.keras  exploit_24_dos_deep_nesting.keras  exploit_25_hdf5_pickle.h5  exploit_26_module_import.keras  exploit_27_builtins.keras  exploit_28_eval_function.keras  exploit_29_marshal_bytecode.keras  exploit_30_function_type.keras  exploit_31_symlink.keras  exploit_32_multiple_lambdas.h5  exploit_32_multiple_lambdas.keras  exploit_33_callback_rce.keras  exploit_dos_memory.h5  exploit_rce_lambda.h5  (+2 more)
src/mlsec_analyzer/: __init__.py  analyzer.py  cli.py  extractor.py
src/mlsec_analyzer/config/: __init__.py  default_config.py
src/mlsec_analyzer/generators/: __init__.py  base_generator.py  gguf_generator.py  keras_generator.py  numpy_generator.py  pickle_generator.py  tensorflow_generator.py
src/mlsec_analyzer/reporters/: __init__.py  json_reporter.py  poc_generator.py  sarif_reporter.py
src/mlsec_analyzer/scanners/: __init__.py  backdoor_scanner.py  base_scanner.py  dependency_scanner.py  external_ref_scanner.py  gguf_scanner.py  graph_injection_scanner.py  guarddog_scanner.py  lambda_layer_scanner.py  metadata_scanner.py  modelscan_scanner.py  pickle_scanner.py  polyglot_scanner.py  secrets_scanner.py  (+1 more)
tests/: __init__.py  conftest.py  test_extractor.py  test_reporter.py
tests/test_scanners/: __init__.py  test_pickle_scanner.py  test_zip_slip_scanner.py
(+5 files in other folders)
